--- a/index.html
+++ b/index.html
@@ -116,13 +116,23 @@
 
             <!--About Me-->
             <h2 id="intro">About Me</h2>
-            <p>
-      I am current a Master's student at the <a href="https://en.ustc.edu.cn/" target="_blank">University of Science and Technology of China</a>, advised by Professors Jie Zhang and <a href="https://auto.ustc.edu.cn/2021/0510/c25977a484824/page.htm" target="_blank">Chengjun Xie</a>. I earned my Bachelor's in Software Engineering in 2022 from <a href="https://en.xmu.edu.cn/main.htm" target="_blank">Xiamen University</a>, under the guidance of Professor <a href="http://mocom.xmu.edu.cn/static/lai-ch" target="_blank">Yongxuan Lai</a>. During my undergraduate studies, I also engaged in research at the <a href="http://mocom.xmu.edu.cn/" target="_blank">MOCOM</a> lab.
-            </p>
-
-            <p>
-My research interests are centered around computer vision, specifically in image super-resolution, enhancement, and video generation. Previously, I have explored remote sensing image processing and federated learning. My goal is to make the world look beautiful and clear.
-            </p>
+<p>
+  I am currently a Ph.D. student in Computer Science and Engineering (CSE) at the
+  <a href="https://www.hkust.edu.hk/" target="_blank" rel="noopener">Hong Kong University of Science and Technology (HKUST)</a>,
+  supervised by <a href="https://cqf.io" target="_blank" rel="noopener">Prof. Qifeng Chen</a>.
+  I received my M.S. from the
+  <a href="https://en.ustc.edu.cn/" target="_blank" rel="noopener">University of Science and Technology of China (USTC)</a>,
+  advised by Professors Jie Zhang and
+  <a href="https://auto.ustc.edu.cn/2021/0510/c25977a484824/page.htm" target="_blank" rel="noopener">Chengjun Xie</a>.
+  I earned my Bachelor's degree in Software Engineering in 2022 from
+  <a href="https://en.xmu.edu.cn/main.htm" target="_blank" rel="noopener">Xiamen University</a>,
+  under the guidance of <a href="http://mocom.xmu.edu.cn/static/lai-ch" target="_blank" rel="noopener">Prof. Yongxuan Lai</a>,
+  and conducted research at the <a href="http://mocom.xmu.edu.cn/" target="_blank" rel="noopener">MOCOM Lab</a>.
+</p>
+<p>
+  My current research focuses on <b>video generation</b> and <b>world models</b>—including long-horizon, controllable, and identity-consistent video synthesis.
+  Previously, I worked on <b>low-level vision</b> problems such as image restoration.
+</p>
             
 
             <!--Experience-->
@@ -139,8 +149,8 @@ My research interests are centered around computer vision, specifically in image
                 <div class="content">
                   <p>
                     <b>Research Intern</b> | Kling AI team, Kuaishou Inc<br>
-                    Time: Feb 2025 - Present. Mentor: Dr. <a href="https://liuquande.github.io" target="_blank">Quande Liu</a>.<br>
-                    <b>Topic: Diffusion Model, Video Generation.</b>
+                    Time: Feb 2025 - Aug 2025 Mentor: Dr. <a href="https://liuquande.github.io" target="_blank">Quande Liu</a>.<br>
+                    <b>Topic: Video Generation.</b>
                   </p>
                 </div>
               </div>
@@ -479,5 +489,6 @@ My research interests are centered around computer vision, specifically in image
 </body>
 
 </html>
+
 
 
