--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                   <p>
                     <b>GameGen-X: Interactive Open-World Game Video Generation</b><br>
                     Haoxuan Che, <b>Xuanhua He (Co-first Author) </b>, Quande Liu, Cheng Jin, Hao Chen<br>
-                    <i>2025 International Conference on Learning Representations (<b>ICLR</b>)</i><br>
+                    <i>2025 International Conference on Learning Representations (<b>ICLR</b>), 2025</i><br>
                     <a href="https://gamegen-x.github.io/" target="_blank">[Paper]</a>
                     <a href="https://arxiv.org/abs/2411.00769" target="_blank">[Arxiv]</a>
                     <a href="https://github.com/GameGen-X/GameGen-X" target="_blank">[Code]</a>
@@ -288,48 +288,6 @@
                 </div>
               </div>
             </article>
-
-            <article class="columns">
-              <div class="column is-3">
-                <figure class="image">
-                  <img src="images/publications/TGRS.png">
-                </figure>
-              </div>
-              <div class="column">
-                <div class="content">
-                  <p>
-                    <b>Cross-Modality Interaction Network for Pan-Sharpening</b><br>
-                    Yingying Wang, <b>Xuanhua He</b>, Yuhang Dong, Yunlong Lin, Yue Huang, Xinghao Ding<br>
-                    <i>IEEE Transactions on Geoscience and Remote Sensing (<b>TGRS</b>), 2024</i><br>
-                    <a href="https://ieeexplore.ieee.org/document/10552904" target="_blank">[Paper]</a>
-                    <a href="" target="_blank">[Arxiv]</a>
-                    <a href="" target="_blank">[Code]</a>
-                  </p>
-                </div>
-              </div>
-            </article>
-
-            <!--List of publications-->
-            <article class="columns">
-              <div class="column is-3">
-                <figure class="image">
-                  <img src="images/publications/TGRS.png">
-                </figure>
-              </div>
-              <div class="column">
-                <div class="content">
-                  <p>
-                    <b>Pan-sharpening with Wavelet Enhanced High-Frequency Information</b><br>
-                    Jie Zhang, <b>Xuanhua He (Co-first Author, First Student Author) </b>, Keyu Yan, Ke Cao, Rui Li, Chengjun Xie, Man Zhou, Danfeng Hong<br>
-                    <i>IEEE Transactions on Geoscience and Remote Sensing (<b>TGRS</b>), 2024</i><br>
-                    <a href="https://ieeexplore.ieee.org/document/10440188" target="_blank">[Paper]</a>
-                    <a href="" target="_blank">[Arxiv]</a>
-                    <a href="https://github.com/alexhe101/WINet" target="_blank">[Code]</a>
-                  </p>
-                </div>
-              </div>
-            </article>
-
             <article class="columns">
               <div class="column is-3">
                 <figure class="image">
@@ -489,6 +447,7 @@
 </body>
 
 </html>
+
 
 
 
