--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
             <div class="content">
               <h2 style="margin-top: 1em">Xuanhua He<br/> (何炫华)</h2>
               <p>
-                <b>University of Science and Technology of China</b><br/> 
-                Hefei, China
+                <b>HKUST</b><br/> 
+                HongKong
               </p>
             </div>
             <!-- social network icons -->
@@ -447,6 +447,7 @@
 </body>
 
 </html>
+
 
 
 
