--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
             <div class="paper-authors"><b>Xuanhua He</b>, Keyu Yan, Rui Li, Chengjun Xie, Jie Zhang, Man Zhou</div>
             <div><span class="paper-venue highlight">AAAI 2024</span></div>
             <div class="btn-row">
-              <a href="#" class="btn-pill"><i class="fa-regular fa-file-pdf"></i> Paper</a>
+              <a href="https://arxiv.org/abs/2401.02151" class="btn-pill"><i class="fa-regular fa-file-pdf"></i> PDF</a>
               <a href="https://github.com/alexhe101/FAME-Net" class="btn-pill"><i class="fa-brands fa-github"></i> Code</a>
             </div>
           </div>
@@ -470,8 +470,24 @@
             <div class="paper-authors"><b>Xuanhua He</b>, Tao Hu, Guoli Wang, Zejin Wang, Run Wang, Qian Zhang, Keyu Yan, Ziyi Chen, Rui Li, Chengjun Xie, Jie Zhang, Man Zhou</div>
             <div><span class="paper-venue highlight">AAAI 2024</span></div>
             <div class="btn-row">
-              <a href="#" class="btn-pill"><i class="fa-regular fa-file-pdf"></i> Paper</a>
+              <a href="https://arxiv.org/abs/2401.02161" class="btn-pill"><i class="fa-regular fa-file-pdf"></i> PDF</a>
               <a href="https://github.com/alexhe101/FourierISP" class="btn-pill"><i class="fa-brands fa-github"></i> Code</a>
+            </div>
+          </div>
+        </article>
+        <article class="paper-card">
+          <div class="paper-img">
+            <img src="images/publications/tcsvt.png" alt="tcsvt">
+          </div>
+          <div class="paper-content">
+            <div class="paper-title">Distilling Textual Priors from LLM to Efficient Image Fusion
+            </div>
+            <div class="paper-authors">Ran Zhang, <b>Xuanhua He* (Project Leader)</b>, Ke Cao, Liu Liu, Li Zhang, Man Zhou, Jie Zhang, Meng Wang
+            </div>
+            <div><span class="paper-venue highlight">IEEE TCSVT 2025</span></div>
+            <div class="btn-row">
+              <a href="https://arxiv.org/abs/2504.07029" class="btn-pill"><i class="fa-regular fa-file-pdf"></i> PDF</a>
+              <a href="https://github.com/Zirconium233/DTPF" class="btn-pill"><i class="fa-brands fa-github"></i> Code</a>
             </div>
           </div>
         </article>
