--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
     <aside class="sidebar">
       <div class="profile-card">
         <img src="images/misc/mainfig.jpg" alt="Xuanhua He" class="avatar">
-        <h1 class="name">Xuanhua He</h1>
+        <h1 class="name">Xuanhua He（何炫华）</h1>
         <div class="role">Ph.D. Student @ HKUST</div>
         
         <div class="social-links">
