--- a/index.html
+++ b/index.html
@@ -345,6 +345,23 @@
         <div class="topic-title">Video Generation & World Models</div>
         <article class="paper-card">
           <div class="paper-img">
+            <img src="https://xuanhuahe.github.io/ORCA/assets/main_large.png" alt="ORCA"></img>
+          </div>
+          <div class="paper-content">
+            <div class="paper-title">Active Intelligence in Video Avatars via Closed-loop World Modeling
+            </div>
+            <div class="paper-authors"><b>Xuanhua He</b>, Tianyu Yang, Ke Cao, Ruiqi Wu, Cheng Meng, Yong Zhang, Zhuoliang Kang, Xiaoming Wei, Qifeng Chen</div>
+            <div><span class="paper-venue highlight">Arxiv 2026</span></div>
+            <div class="btn-row">
+              <a href="https://xuanhuahe.github.io/ORCA/" class="btn-pill"><i class="fa-solid fa-globe"></i> Project</a>
+              <a href="https://arxiv.org/abs/2512.20615" class="btn-pill"><i class="fa-regular fa-file-pdf"></i> PDF</a>
+              <a href="https://github.com/xuanhuahe/ORCA/tree/code" class="btn-pill"><i class="fa-brands fa-github"></i> Code</a>
+            </div>
+          </div>
+        </article>
+
+        <article class="paper-card">
+          <div class="paper-img">
             <img src="https://yychen233.github.io/ContextFlow-page/static/images/teaser.png" alt="ContextFlow"></img>
           </div>
           <div class="paper-content">
@@ -370,7 +387,7 @@
             </div>
             <div><span class="paper-venue highlight">Arxiv 2025</span></div>
             <div class="btn-row">
-              <a href="https://fulldit2.github.io/" class="btn-pill"><i class="fa-solid fa-globe"></i> Project</a>
+              <a href="https://xuanhuahe.github.io/FullDiT2/" class="btn-pill"><i class="fa-solid fa-globe"></i> Project</a>
               <a href="https://arxiv.org/abs/2506.04213" class="btn-pill"><i class="fa-regular fa-file-pdf"></i> PDF</a>
             </div>
           </div>
